--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-community/slider": "^3.0.3",
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "0.64.0",
+    "secure-random-password": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
